## Version 1.3.12

- Resolves Issue #23 where passing matrices to `melt.data.table` cause a silent
failure for `coxsimtvc`.

- 

## Version 1.3.11

- Resolves Issue #23 with passing matrices to `data.table.melt`

## Version 1.3.10

- hmohiv data now stored internally to avoid breaking URL.

## Version 1.3.9

- Fixed a bug when including rug plots with `simGG.siminteract`. Thanks to
Ting Shuo Huang for reporting.

- Corrected a bug in `simGG.siminteract` and `simGG.simlinear` where the
`shape` parameter was incorrectly supplied to `geom_line`.

## Version 1.3.8

- No longer suggests rio package. Thanks to Jan Gorecki.

## Version 1.3.7

- Enable compatability with dplyr version 0.4.4.

- Fixes bugs when finding hazard rates.

- Minor internal code readability improvements.

## Version 1.3.6

- Improve sim function messages so that `Xl` message
is only shown if `Xl` is incorrectly specified.

## Version 1.3.5

- Fixed issues with `ggfitStrata` and its documentation caused by changes to
the survival and gridExtra packages.

- Minor documentation change removing links to ggplot2 documentation
that no longer exists from version 2.0.0.

## Version 1.3.4

- Internally, `melt` is loaded from the data.table package rather than
reshape2 (which is no longer a dependency). This should provide speed
improvements.

## Version 1.3.3

- `coxsimInteract` can now handle interactions with categorical variables.

## Version 1.3.2

- Minor internal changes to `SurvExpand` that improves speed and stability.

## Version 1.3.1

- Add citation to JSS article.

    Gandrud, Christopher. 2015. simPH: An R Package for Illustrating Estimates
    from Cox Proportional Hazard Models Including for Interactive and Nonlinear
    Effects. Journal of Statistical Software. 65(3)1-20.

## Version 1.3

- !!!!NOTE!!!!: This version alters default behaviour and
functionality in a way that could break your code.

- `simGG` now includes rug plots.
