@@ -26,16 +26,19 @@ importFrom(MASS,mvrnorm)
 importFrom(data.table,as.data.table)
 importFrom(data.table,melt.data.table)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,all_of)
 importFrom(dplyr,as_data_frame)
 importFrom(dplyr,distinct)
 importFrom(dplyr,distinct_)
 importFrom(dplyr,group_by)
 importFrom(dplyr,group_by_)
+importFrom(dplyr,group_by_at)
 importFrom(dplyr,inner_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(dplyr,ungroup)
+importFrom(dplyr,vars)
 importFrom(gridExtra,grid.arrange)
 importFrom(stats,density)
 importFrom(stats,fitted)
